@@ -181,7 +181,8 @@ public final class CFMetaData
                                                          + "thrift_version text,"
                                                          + "cql_version text,"
                                                          + "data_center text,"
-                                                         + "rack text"
+                                                         + "rack text,"
+                                                         + "truncated_at map<uuid, blob>"
                                                          + ") WITH COMMENT='information about the local node'");
 
     public static final CFMetaData TraceSessionsCf = compile(14, "CREATE TABLE " + Tracing.SESSIONS_CF + " ("
